--- a/CompareMapcheck.csproj
+++ b/CompareMapcheck.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyInfo1.cs" />
     <Compile Include="CompareMapcheck.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
